websocket.LogWebSocket - avoid converting a stream to a list (#5741)
and then the list to a stream